--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,73 @@
 
   <body>
     <header>
-    </header>
+       <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid">
+     <a class="navbar-brand p-6" href="/">
+       <%= link_to root_path do %><% end %></a>
+
+     <div class="col-md-2 align-self-center">
+     <% if user_signed_in? %>
+     <p class="text-primary">ようこそ、<%= current_user.nick_name %>さん！</p>
+     <% end %>
+     </div>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+     <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+
+     <% if user_signed_in? %>
+       <li class="nav-item">
+         <%= link_to "マイページ", class: 'nav-link' %>
+       </li>
+       <li class="nav-item">
+         <%= link_to "作品一覧", class: 'nav-link' %></li>
+       <li class="nav-item">
+         <%= link_to "アイテム一覧",class: 'nav-link' %></li>
+       <li class="nav-item">
+         <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+       </li>
+
+     <% elsif admin_signed_in? %>
+       <li class="nav-item">
+         <%= link_to "会員一覧",  class: 'nav-link' %></li>
+       <li class="nav-item">
+         <%= link_to "作品一覧", class: 'nav-link' %></li>
+       <li class="nav-item">
+         <%= link_to "作品コメント一覧", class: 'nav-link' %></li>
+       <li class="nav-item">
+         <%= link_to "アイテム一覧", class: 'nav-link' %></li>
+       <li class="nav-item">
+         <%= link_to "アイテムコメント一覧", class: 'nav-link' %></li>
+       <li class="nav-item">
+         <%= link_to "ジャンル管理", class: 'nav-link' %></li>
+       <li class="nav-item">
+         <%= button_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link' %>
+       </li>
+
+     <% else %>
+       <li class="nav-item">
+         <%= link_to "新規登録", new_user_registration_path, class: 'nav-link' %>
+       </li>
+       <li class="nav-item">
+         <%= link_to "ログイン", new_user_session_path, class: 'nav-link' %>
+       </li>
+       <li class="nav-item">
+         <%= link_to 'ゲストログイン（閲覧用）' ,class: 'nav-link' %>
+       </li>
+    <% end %>
+
+    </div>
+    </div>
+   </nav>
+  </header>
 
     <main>
       <%= yield %>
     </main>
-    <footer></footer>
+    <footer class="bg-secondary text-white pt-5 pb-4"></footer>
   </body>
 </html>
