ゲストログイン機能の実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
          <%= link_to "ログイン", new_user_session_path, class: 'nav-link' %>
        </li>
        <li class="nav-item">
-         <%= link_to 'ゲストログイン（閲覧用）' ,class: 'nav-link' %>
+         <%= button_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, method: :post, class: 'nav-link' %>
        </li>
     <% end %>
 
