モデルの作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,9 @@
          <%= link_to "マイページ", class: 'nav-link' %>
        </li>
        <li class="nav-item">
-         <%= link_to "商品一覧", class: 'nav-link' %></li>
+         <%= link_to "投稿一覧", class: 'nav-link' %></li>
        <li class="nav-item">
-         <%= link_to "アイテム一覧",class: 'nav-link' %></li>
+         <%= link_to "レビュー一覧",class: 'nav-link' %></li>
        <li class="nav-item">
          <%= button_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link' %>
        </li>
@@ -47,13 +47,13 @@
        <li class="nav-item">
          <%= link_to "会員一覧",  class: 'nav-link' %></li>
        <li class="nav-item">
-         <%= link_to "作品一覧", class: 'nav-link' %></li>
+         <%= link_to "投稿一覧", class: 'nav-link' %></li>
        <li class="nav-item">
-         <%= link_to "作品コメント一覧", class: 'nav-link' %></li>
+         <%= link_to "レビュー一覧", class: 'nav-link' %></li>
        <li class="nav-item">
-         <%= link_to "アイテム一覧", class: 'nav-link' %></li>
+         <%= link_to "コメント一覧",class: 'nav-link' %></li>
        <li class="nav-item">
-         <%= link_to "アイテムコメント一覧", class: 'nav-link' %></li>
+         <%= link_to "ショップ管理", class: 'nav-link' %></li>
        <li class="nav-item">
          <%= link_to "ジャンル管理", class: 'nav-link' %></li>
        <li class="nav-item">
