--- a/app/views/admin/shops/index.html.erb
+++ b/app/views/admin/shops/index.html.erb
@@ -2,21 +2,7 @@
  <div class="row justify-content-center">
   <h2 class="title mb-2">ショップ管理</h2>
 
-   <div class="col-md-3 m-3 p-3">
-    <h5 class="title mb-2">新規登録</h5>
-    <%= form_with model: @shop, url:admin_shops_path, method: :post do |f| %>
-
-    <div class="form-group row">
-     <div class="field">
-      <h6 class="text-dark p-2">ショップ名</h6>
-     　<%= f.text_field :name, class: 'form-control'%>
-     </div>
-    </div>
-    <div class="actions m-3">
-     <%= f.submit '投稿',class: "btn btn-primary" %>
-    </div>
-    <% end %>
-  </div>
+  <%= render partial: 'admin/example_partial', locals: { hoge: @shop, custom_url:admin_shops_path } %>
 
   <div class="col-md-8 m-3 p-3 offset-md-1">
    <h5 class="title m-2 p-2 mb-0">ショップ一覧</h5>
