--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 
      <% if user_signed_in? %>
        <li class="nav-item">
-         <%= link_to "マイページ", class: 'nav-link' %>
+         <%= link_to "マイページ", mypage_path, class: 'nav-link' %>
        </li>
        <li class="nav-item">
          <%= link_to "投稿一覧", posts_path, class: 'nav-link' %></li>
