--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,9 +80,9 @@
     <main>
       <%= yield %>
     </main>
-    <footer class="container-fluid mt-5 bg-secondary text-white pt-5 pb-4">
-     <div class="row">
-     </div>
-    </footer>
+    <!--<footer class="container-fluid mt-5 bg-secondary text-white pt-5 pb-4">-->
+    <!-- <div class="row">-->
+    <!-- </div>-->
+    <!--</footer>-->
   </body>
 </html>
