--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,2 +1,7 @@
 <%= @user.name %>
 <%= image_tag @user.get_profile_image(300,300) %>
+
+<%= @user.introduction %>
+
+<%= link_to '編集', edit_user_path(current_user.id) %>
+
