--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -17,3 +17,6 @@
 <%= f.submit "変更を保存" %>
 
 <% end %>
+
+<p><%= link_to "退会する", confirm_unsubscribe_path, class: "btn btn-danger" %></p>
+<p><%= link_to "マイページに戻る", mypage_path, class: "underline" %></p>
