--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -4,3 +4,10 @@
 <%= link_to "新規投稿", new_post_path %>
 
 
+<% @posts.each do |post| %>
+
+<%= image_tag post.get_image(200, 200) %>
+<%= post.title %>
+<%= post.rating %>
+
+<% end %>
