--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,13 +1,20 @@
 投稿一覧
 
 
+
 <%= link_to "新規投稿", new_post_path %>
 
+<div>
 
 <% @posts.each do |post| %>
 
+<%= link_to post_path(post.id) do %>
 <%= image_tag post.get_image(200, 200) %>
+<% end %>
+
 <%= post.title %>
 <%= post.rating %>
 
 <% end %>
+
+</div>
