--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -2,35 +2,7 @@
 
 <%= form_with model: @post, url: posts_path, method: :post do |f| %>
 
-<h5>投稿画像</h5>
-<%= f.file_field :image, accept: "image/*" %>
-
-<h5>タイトル</h5>
-<%= f.text_field :title %>
-
-<h5>コメント</h5>
-<%= f.text_field :content %>
-
-<h5>価格</h5>
-<%= f.number_field :price %>
-
-<%= f.label :genre_id, "ショップ" %>
-<div class="select_field"><%= f.collection_select :shop_id, Shop.all, :id, :name %>
-
-<%= f.label :genre_id, "ジャンル" %>
-<div class="select_field"><%= f.collection_select :genre_id, Genre.all, :id, :name %>
-
-
-  <div class="field">
-    <%= f.label :rating, "評価" %>
-    <%= f.select :rating, (1..5).to_a %>
-  </div>
-  <div class="field">
-    <%= f.label :tag_ids %>
-    <%= f.collection_select :tag_ids, Tag.all, :id, :name, {}, { multiple: true } %>
-  </div>
-
-
+<%= render partial: 'form', locals: {f:f } %>
 
  <div class="actions m-3">
  <%= f.submit '保存', class: "btn btn-success" %>
