--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -16,3 +16,5 @@
 </div>
 
 <%= link_to '編集', edit_post_path %>
+<%= button_to '削除', post_path(@post.id), method: :delete, data: { turbo_confirm: "本当に削除してよろしいですか？"} %>
+
