--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -15,6 +15,7 @@
 <%= post.title %>
 <%= post.rating %>
 <%= post.tags.name %>
+<%= link_to "#{post.post_comments.count} コメント", post_path(post.id) %>
 
 <% end %>
 
