--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -21,7 +21,17 @@
     <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
     <%= post_comment.user.name %>
     <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.content %>
+
+
+  <% if post_comment.user == current_user %>
+
+   <%= button_to '削除', post_post_comment_path(post_comment.post, post_comment), method: :delete, data: { turbo_confirm: "コメントを削除してよろしいですか？"} %>
   <% end %>
+
+  <% end %>
+
+
+
 </div>
 <div>
   <%= form_with model: [@post, @post_comment] do |f| %>
