--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -7,20 +7,9 @@
 <div>
 
 <% @tag_list.each do |list|%>
-<%= list.name %>
+<%= link_to list.name, search_tag_path(tag_id: list.id) %>
 <%= "(#{list.posts.count})" %><% end %>
 
-<% @posts.each do |post| %>
-
-<%= link_to post_path(post.id) do %>
-<%= image_tag post.get_image(200, 200) %>
-<% end %>
-
-<%= post.title %>
-<%= post.rating %>
-<%= link_to "#{post.post_comments.count} コメント", post_path(post.id) %>
-
-
-<% end %>
+<%= render 'index', posts: @posts %>
 
 </div>
