--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -31,7 +31,7 @@
   <% end %>
 
 　<% @post_tags.each do |tag| %>
-  <%=tag.name%><%="(#{tag.posts.count})" %>
+  <%= link_to tag.name, search_tag_path(tag_id: tag.id) %><%="(#{tag.posts.count})" %>
   <% end %>
 
 </div>
