--- a/app/views/public/posts/search_tag.html.erb
+++ b/app/views/public/posts/search_tag.html.erb
@@ -3,7 +3,7 @@
 
 <% @tag_list.each do |list|%>
 <%=link_to list.name,search_tag_path(tag_id: list.id) %>
-<%="(#{list.posts.count})" %>
+<%="(#{list.posts.published.count})" %>
 <% end %>
 
 
