ジャンル一覧表示

--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -6,11 +6,16 @@
 
 <div>
 
+ジャンル一覧
+<% @genres.each do |genre| %>
+<%= link_to genre.name, genres_path(genre_id: genre.id), method: :get %>
+<% end %>
 
-
-<% @tag_list.each do |list|%>
+タグ一覧
+<% @tag_list.each do |list| %>
 <%= link_to list.name, search_tag_path(tag_id: list.id) %>
-<%= "(#{list.posts.published.count})" %><% end %>
+<%= "(#{list.posts.published.count})" %>
+<% end %>
 
 <%= render 'index', posts: @posts %>
 
