--- a/app/views/public/posts/_form.html.erb
+++ b/app/views/public/posts/_form.html.erb
@@ -16,7 +16,10 @@
 <%= f.label :genre_id, "ジャンル" %>
 <div class="select_field"><%= f.collection_select :genre_id, Genre.all, :id, :name %>
 
-
+<div class="form-group row" id="star">
+    <%= f.label :rating,'評価 ', class:'col-md-3 col-form-label' %>
+    <%= f.hidden_field :star, id: :review_star %>
+　　　　</div>
   <div class="field">
     <%= f.label :rating, "評価" %>
     <%= f.select :rating, (1..5).to_a %>
